<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
    <item
            android:id="@+id/menu_settings"
            android:showAsAction="never"
            android:title="@string/settings"/>
    -->

    <item
            android:id="@+id/menu_save"
            android:showAsAction="ifRoom"
            android:icon="@drawable/ic_action_add"
            android:title="@string/guardar"/>

    <item
            android:id="@+id/menu_new"
            android:showAsAction="ifRoom|withText"
            android:icon="@drawable/ic_action_menu"
            android:title="@string/menu">
        <menu>
            <item android:id="@+id/submenu_nuevo"
                  android:title="@string/nuevo_programa" />
            <item android:id="@+id/submenu_editar"
                android:title="@string/editar_programa" />
            <item android:id="@+id/menu_settings"
                android:showAsAction="ifRoom"
                android:title="@string/settings" />
        </menu>
    </item>


</menu>