<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="@dimen/ancho_dialogo"
        android:layout_height="fill_parent"
        android:padding="@dimen/margin_small"
        android:background="@color/gris_75">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="@dimen/ancho_dialogo_campos"
                android:layout_height="fill_parent"
                android:layout_marginRight="@dimen/margin_small">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_horas"
                    android:id="@+id/tv_text_minutos"
                    style="@style/texto_linearoja_dialig"/>

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:id="@+id/imageView4"
                    style="@style/linearoja"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/txtHoras"
                    style="@style/campos_texto_dialog"
                    android:autoText="true"/>

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:id="@+id/imageView3"
                    style="@style/lineagris"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="@dimen/ancho_dialogo_campos"
                android:layout_height="fill_parent"
                android:layout_marginRight="@dimen/margin_small">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_minutos"
                    android:id="@+id/textView"
                    style="@style/texto_linearoja_dialig"/>

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:id="@+id/imageView4"
                    style="@style/linearoja"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    style="@style/campos_texto_dialog"
                    android:id="@+id/txtMinutos"/>

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:id="@+id/imageView1"
                    style="@style/lineagris"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="@dimen/ancho_dialogo_campos"
                android:layout_height="fill_parent"
                android:layout_marginRight="@dimen/margin_small">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_segundos"
                    android:id="@+id/tv_text_minutos"
                    style="@style/texto_linearoja_dialig"/>

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:id="@+id/imageView4"
                    style="@style/linearoja"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    style="@style/campos_texto_dialog"
                    android:ems="10"
                    android:id="@+id/txtSegundos"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:id="@+id/imageView12"
                    style="@style/lineagris"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_aceptar"
                android:id="@+id/btAcept"
                android:layout_weight="25"
                />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_cancelar"
                android:layout_weight="25"
                android:id="@+id/btCancel"/>
    </LinearLayout>

</LinearLayout>